fix uncovered height

--- a/src/assets/stylesheets/index.scss
+++ b/src/assets/stylesheets/index.scss
@@ -13,8 +13,12 @@
 @import "chem-elements.scss";
 
 body {
+    background: url('../images/header-background.svg') #466685;
+    background-size: cover;
+
     font-size: 1em;
     margin: 0;
+    min-height: 100vh;
     padding: 0;
 
     display: flex;
@@ -23,8 +27,6 @@ body {
 }
 
 html {
-    background: url('../images/header-background.svg') #466685;
-    background-size: cover;
     font-family: "Helvetica Neue", Helvetica, Arial, PingFangTC-Light, "Microsoft YaHei", 微软雅黑, "STHeiti Light", STXihei, "华文细黑", Heiti, 黑体, sans-serif;
     margin: 0;
     padding: 0;
